--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "spatie/laravel-permission": "^3.13"
+        "tcg/voyager": "^1.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
@@ -41,8 +41,8 @@
             "App\\": "app/"
         },
         "classmap": [
-          "database/seeds",
-          "database/factories"
+            "database/seeds",
+            "database/factories"
         ]
     },
     "autoload-dev": {
@@ -63,5 +63,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "hooks": {
+            "type": "composer",
+            "url": "https://larapack.io"
+        }
     }
 }
