--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,50 @@
-version: '2.2'
-
+version: '3'
 
 services:
     mysql:
-        container_name: mysql
-        build: docker_confs/builds/mariadb/.
-        volumes:
-            - ./docker_confs/builds/mariadb/charset.cnf:/etc/mysql/conf.d/charset.cnf
-            - ./docker_confs/docker_volumes/mysql:/var/lib/mysql
-            - ./docker_confs/php7-fpm/configs/custom.ini:/usr/local/etc/php/conf.d/custom.ini
-        environment:
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-            MYSQL_DATABASE: ${DB_DATABASE}
-            MYSQL_PASSWORD: ${DB_PASSWORD}
-            DB_ADMIN_PASS: ${DB_PASSWORD}
-        ports:
-            - "15306:3306"
-    php:
-        container_name: php
-        build: docker_confs/php7-fpm
+      image: 'mysql:8.0'
+      ports:
+        - '${FORWARD_DB_PORT:-3306}:3306'
+      environment:
+        MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+        MYSQL_DATABASE: '${DB_DATABASE}'
+        MYSQL_USER: '${DB_USERNAME}'
+        MYSQL_PASSWORD: '${DB_PASSWORD}'
+        MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      volumes:
+        - ./docker_confs/docker_volumes/mysql:/var/lib/mysql
+      networks:
+        - sail
+      healthcheck:
+        test: [ "CMD", "mysqladmin", "ping" ]
+
+    mvp_php:
+        container_name: mvp_php
+        build: docker_confs/php8
         volumes:
             - ${APP_PATH}:/code
             - ${APP_PATH}/var/log:/code/var/log
             - ~/.ssh/:/root/.ssh/
-            - ./docker_confs/php7-fpm/configs/custom.ini:/usr/local/etc/php/conf.d/custom.ini
         links:
             - mysql
         environment:
-            XDEBUG_CONFIG: "remote_host=172.17.0.1"
-            DOCKER_HOST: "tcp://localhost:4243"
-            PHP_IDE_CONFIG: "serverName=docker"
+          PHP_IDE_CONFIG: "serverName=Docker"
+        networks:
+          - sail
 
-    phpunit:
-        container_name: phpunit
-        build:
-            context: docker_confs/php7-fpm
-
-        volumes:
-        - ${APP_PATH}:/code
-        - ${APP_PATH}/var/log:/code/var/log
-        - ~/.ssh/:/root/.ssh/
-        - ./docker_confs/php7-fpm/configs/custom.ini:/usr/local/etc/php/conf.d/custom.ini
-        links:
-        - mysql
-        environment:
-            XDEBUG_CONFIG: "remote_host=172.17.0.1"
-            DOCKER_HOST: "tcp://localhost:4243"
-            PHP_IDE_CONFIG: "serverName=docker"
-
-    nginx:
-        image: nginx:1.9.10
-        container_name: nginx
+    mvp_nginx:
+        image: nginx:latest
+        container_name: mvp_nginx
         ports:
             - "80:80"
+            - "443:443"
         volumes:
+            - ${APP_PATH}:/code
             - ./docker_confs/nginx/ero.conf:/etc/nginx/conf.d/ero.conf
-        volumes_from:
-            - php
         links:
-            - php
+            - mvp_php
+        networks:
+          - sail
 
     # redis:
     #     container_name: 'rt_redis'
@@ -116,3 +102,6 @@ services:
     #     ports:
     #         - 5672
     #         - "15673:15672"
+networks:
+  sail:
+    driver: bridge
